Fixed alignment errors. Completed.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -219,7 +219,8 @@ footer {
    margin-left: 35px;
  }
  .portCenterBox{
-  width:90%
+  width:90%;
+  margin:25px 20px 60px 35px;
  }
  .port-pics{
   position: relative;
@@ -289,7 +290,7 @@ header {
     width: 420px;
   }
   .centerBox {
-    
+    width:86%;
     overflow: auto;
-    margin:25px 20px 60px 45px;
+    margin:-20px 20px 60px 45px;
 }}
